--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -231,6 +231,15 @@ a {
   text-align: right;
 }
 
+.nav li {
+  display: inline-block;
+  margin: 0 10px;
+  vertical-align: top;
+}
+.nav li:last-child {
+  margin-right: 0;
+}
+
 /*
   ========================================
   Clearfix
@@ -314,6 +323,13 @@ a {
   line-height: 33px;
 }
 
+.teaser img {
+  border-radius: 5px;
+  display: block;
+  margin-bottom: 22px;
+  max-width: 100%;
+}
+
 /*
   ========================================
   Основной подвал
@@ -329,4 +345,42 @@ a {
 .primary-footer small {
   float: left;
   font-weight: 400;
+}
+
+/*
+  ========================================
+  Спикеры
+  ========================================
+*/
+
+.speaker {
+  margin-bottom: 44px;
+}
+
+.speaker-info {
+  border: 1px solid #dfe2e5;
+  border-radius: 5px;
+  margin-top: 88px;
+  padding-bottom: 22px;
+  text-align: center;
+}
+
+.speaker-info img {
+  border-radius: 50%;
+  height: 130px;
+  margin: -66px 0 22px 0;
+  vertical-align: top;
+}
+
+/*
+  ========================================
+  Место проведения
+  ========================================
+*/
+
+.venue-theatre {
+  margin-bottom: 66px;
+}
+.venue-hotel {
+  margin-bottom: 22px;
 }
